# template

./: .gitignore  Makefile  pyproject.toml  ruff.toml
template/: sum.py
template/scripts/: main.py
tests/: test_sum.py
