[project]
name = "template"
version = "0.1.0"
description = "Template"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[project.scripts]
template = "template.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template"]
